# hands-on-network

./: CMakeLists.txt  LICENSE  README.md  cmake-variants.yaml
.github/workflows/: cmake.yml
hands-on-network/: CMakeLists.txt  list_adapters.c  tcp_client.c  time_server.c  time_server_dual.c
