add_executable(list-adapters
    ${CMAKE_CURRENT_LIST_DIR}/list_adapters.c
)

add_executable(time-server
    ${CMAKE_CURRENT_LIST_DIR}/time_server.c
)

add_executable(time-server-dual
    ${CMAKE_CURRENT_LIST_DIR}/time_server_dual.c
)

add_executable(tcp-client
    ${CMAKE_CURRENT_LIST_DIR}/tcp_client.c
)